--- a/core/res/res/values/colors_device_defaults.xml
+++ b/core/res/res/values/colors_device_defaults.xml
@@ -33,8 +33,8 @@
     <color name="tertiary_device_default_settings">@color/tertiary_material_settings</color>
     <color name="quaternary_device_default_settings">@color/quaternary_material_settings</color>
 
-    <color name="accent_device_default_light">@color/accent_material_light</color>
-    <color name="accent_device_default_dark">@color/accent_material_dark</color>
+    <color name="accent_device_default_light">#ff1a73e8</color>
+    <color name="accent_device_default_dark">#ff8ab4f8</color>
     <color name="accent_device_default">@color/accent_device_default_light</color>
 
     <color name="background_device_default_dark">@color/background_material_dark</color>
@@ -43,8 +43,8 @@
     <color name="background_floating_device_default_light">@color/background_floating_material_light</color>
 
     <!-- Error color -->
-    <color name="error_color_device_default_dark">@color/error_color_material_dark</color>
-    <color name="error_color_device_default_light">@color/error_color_material_light</color>
+    <color name="error_color_device_default_dark">#fff28b82</color>
+    <color name="error_color_device_default_light">#ffd93025</color>
 
     <color name="list_divider_color_light">#ffdadce0</color>
     <color name="list_divider_color_dark">#85ffffff</color>
