base: Added OOS style switches by default

--- a/core/res/res/color/switch_track_material.xml
+++ b/core/res/res/color/switch_track_material.xml
@@ -21,4 +21,7 @@
     <item android:state_checked="true"
           android:color="?attr/colorControlActivated" />
     <item android:color="?attr/colorForeground" />
+	<item android:state_checked="false"
+          android:color="?attr/colorForeground"
+          android:alpha="?attr/disabledAlpha" />
 </selector>
