--- a/core/res/res/drawable/switch_track_material.xml
+++ b/core/res/res/drawable/switch_track_material.xml
@@ -14,15 +14,41 @@
      limitations under the License.
 -->
 
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:gravity="center_vertical|fill_horizontal"
-          android:start="4dp"
-          android:end="4dp">
-        <shape android:shape="rectangle"
-               android:tint="@color/switch_track_material">
-            <corners android:radius="7dp" />
-            <solid android:color="@color/white_disabled_material" />
-            <size android:height="14dp" />
-        </shape>
+<selector
+  xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_checked="true">
+        <layer-list>
+            <item android:gravity="center_vertical|fill_horizontal"
+                  android:start="4dp"
+                  android:end="4dp">
+                <shape android:shape="rectangle" >
+                    <size android:height="14dp" android:width="5dp" />
+                    <corners android:radius="7dp" />
+	                <gravity android:gravity="center_vertical" />
+                    <solid android:color="@android:color/transparent" />
+                    <stroke
+                        android:width="2dp"
+                        android:color="@color/switch_track_material"/>
+                </shape>
+            </item>
+        </layer-list>
+    </item>
+    <item android:state_checked="false">
+        <layer-list>
+            <item android:gravity="center_vertical|fill_horizontal"
+                  android:start="4dp"
+                  android:end="4dp">
+                <shape android:shape="rectangle" >
+                    <size android:height="14dp" android:width="5dp" />
+                    <corners android:radius="7dp" />
+	                <gravity android:gravity="center_vertical" />
+                    <solid android:color="@android:color/transparent" />
+                    <stroke
+                        android:width="2dp"
+                        android:color="@color/switch_track_material"/>
+                </shape>
+            </item>
+        </layer-list>
     </item>
 </layer-list>
+</selector>
