--- a/packages/SystemUI/res/color/qs_background_dark.xml
+++ b/packages/SystemUI/res/color/qs_background_dark.xml
@@ -15,6 +15,6 @@
 -->
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:alpha="1"
+    <item android:alpha="@dimen/qs_panel_background_alpha"
           android:color="?android:attr/colorBackgroundFloating"/>
 </selector>
