--- a/packages/SystemUI/res/drawable/stat_sys_rotate_landscape.xml
+++ b/packages/SystemUI/res/drawable/stat_sys_rotate_landscape.xml
@@ -15,8 +15,8 @@
      limitations under the License.
 -->
 <inset xmlns:android="http://schemas.android.com/apk/res/android"
-    android:insetLeft="0dp"
-    android:insetRight="0dp">
+    android:insetLeft="@dimen/status_bar_horizontal_padding"
+    android:insetRight="@dimen/status_bar_horizontal_padding">
     <vector
         android:height="17dp"
         android:width="17dp"
