--- a/packages/SystemUI/res/drawable/stat_sys_alarm.xml
+++ b/packages/SystemUI/res/drawable/stat_sys_alarm.xml
@@ -16,6 +16,6 @@
 */
 -->
 <inset xmlns:android="http://schemas.android.com/apk/res/android"
-    android:insetLeft="0dp"
-    android:insetRight="0dp"
+    android:insetLeft="@dimen/status_bar_horizontal_padding"
+    android:insetRight="@dimen/status_bar_horizontal_padding"
     android:drawable="@drawable/ic_alarm" />
