--- a/packages/SystemUI/res/drawable/stat_sys_ringer_silent.xml
+++ b/packages/SystemUI/res/drawable/stat_sys_ringer_silent.xml
@@ -14,8 +14,8 @@ Copyright (C) 2015 The Android Open Source Project
     limitations under the License.
 -->
 <inset xmlns:android="http://schemas.android.com/apk/res/android"
-        android:insetLeft="0dp"
-        android:insetRight="0dp">
+        android:insetLeft="@dimen/status_bar_horizontal_padding"
+        android:insetRight="@dimen/status_bar_horizontal_padding">
     <vector android:width="17dp"
             android:height="17dp"
             android:viewportWidth="24.0"
