--- a/packages/SystemUI/res/drawable/stat_sys_sensors_off.xml
+++ b/packages/SystemUI/res/drawable/stat_sys_sensors_off.xml
@@ -15,8 +15,8 @@
 -->
 
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:insetLeft="0dp"
-        android:insetRight="0dp"
+        android:insetLeft="@dimen/status_bar_horizontal_padding"
+        android:insetRight="@dimen/status_bar_horizontal_padding"
         android:width="17dp"
         android:height="17dp"
         android:viewportWidth="24.0"
