--- a/packages/SystemUI/res/layout/status_bar_mobile_signal_group.xml
+++ b/packages/SystemUI/res/layout/status_bar_mobile_signal_group.xml
@@ -41,7 +41,7 @@
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:src="@drawable/ic_activity_down"
-                android:paddingEnd="0dp"
+                android:paddingEnd="@dimen/status_bar_horizontal_padding"
                 android:visibility="gone"
             />
             <ImageView
@@ -49,7 +49,7 @@
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:src="@drawable/ic_activity_up"
-                android:paddingEnd="0dp"
+                android:paddingEnd="@dimen/status_bar_horizontal_padding"
                 android:visibility="gone"
             />
         </FrameLayout>
@@ -58,7 +58,7 @@
             android:layout_height="wrap_content"
             android:layout_width="12dp"
             android:layout_gravity="center_vertical"
-            android:paddingStart="1dp"
+            android:paddingStart="@dimen/status_bar_horizontal_padding"
             android:paddingEnd="0dp"
             android:visibility="gone" />
         <Space
