--- a/packages/SystemUI/res/layout/status_bar_wifi_group.xml
+++ b/packages/SystemUI/res/layout/status_bar_wifi_group.xml
@@ -29,7 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:gravity="center_vertical"
-        android:layout_marginStart="0dp"
+        android:layout_marginStart="@dimen/status_bar_horizontal_padding"
     >
         <FrameLayout
                 android:id="@+id/inout_container"
@@ -41,7 +41,7 @@
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:src="@drawable/ic_activity_down"
-                android:paddingEnd="0dp"
+                android:paddingEnd="@dimen/status_bar_horizontal_padding"
                 android:visibility="gone"
             />
             <ImageView
@@ -49,7 +49,7 @@
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:src="@drawable/ic_activity_up"
-                android:paddingEnd="0dp"
+                android:paddingEnd="@dimen/status_bar_horizontal_padding"
                 android:visibility="gone"
             />
         </FrameLayout>
