--- a/packages/SystemUI/res/values/dimens.xml
+++ b/packages/SystemUI/res/values/dimens.xml
@@ -66,7 +66,7 @@
     <dimen name="status_bar_icon_size">@*android:dimen/status_bar_icon_size</dimen>
 
     <!-- Default horizontal drawable padding for status bar icons. -->
-    <dimen name="status_bar_horizontal_padding">0dp</dimen>
+    <dimen name="status_bar_horizontal_padding">@*android:dimen/status_bar_horizontal_padding_core</dimen>
 
     <!-- Height of the battery icon in the status bar. -->
     <dimen name="status_bar_battery_icon_height">13.0dp</dimen>
@@ -91,13 +91,13 @@
     <dimen name="status_bar_left_clock_end_padding">1dp</dimen>
 
     <!-- Spacing after the wifi signals that is present if there are any icons following it. -->
-    <dimen name="status_bar_wifi_signal_spacer_width">0dp</dimen>
+    <dimen name="status_bar_wifi_signal_spacer_width">@dimen/status_bar_horizontal_padding</dimen>
 
     <!-- Size of the view displaying the wifi signal icon in the status bar. -->
     <dimen name="status_bar_wifi_signal_size">@*android:dimen/status_bar_system_icon_size</dimen>
 
     <!-- Spacing before the airplane mode icon if there are any icons preceding it. -->
-    <dimen name="status_bar_airplane_spacer_width">0dp</dimen>
+    <dimen name="status_bar_airplane_spacer_width">@dimen/status_bar_horizontal_padding</dimen>
 
     <!-- Spacing between system icons. -->
     <dimen name="status_bar_system_icon_spacing">0dp</dimen>
@@ -298,7 +298,7 @@
     <dimen name="overflow_dot_radius">2dp</dimen>
 
     <!-- the padding between dots in the icon overflow -->
-    <dimen name="overflow_icon_dot_padding">0dp</dimen>
+    <dimen name="overflow_icon_dot_padding">@dimen/status_bar_horizontal_padding</dimen>
 
     <!-- Dimensions related to screenshots -->
 
@@ -857,20 +857,20 @@
 
     <!-- Extra padding between the mobile data type icon and the strength indicator when the data
          type icon is wide. -->
-    <dimen name="wide_type_icon_start_padding">0dp</dimen>
+    <dimen name="wide_type_icon_start_padding">@dimen/status_bar_horizontal_padding</dimen>
 
     <!-- Padding between the mobile signal indicator and the start icon when the roaming icon
          is displayed in the upper left corner. -->
-    <dimen name="roaming_icon_start_padding">0dp</dimen>
+    <dimen name="roaming_icon_start_padding">@dimen/status_bar_horizontal_padding</dimen>
 
     <!-- Extra padding between multiple phone signal icons. -->
-    <dimen name="secondary_telephony_padding">0dp</dimen>
+    <dimen name="secondary_telephony_padding">@dimen/status_bar_horizontal_padding</dimen>
 
     <!-- Extra padding between the mobile data type icon and the strength indicator when the data
          type icon is wide for the tile in quick settings. -->
     <dimen name="wide_type_icon_start_padding_qs">3dp</dimen>
 
-    <dimen name="signal_indicator_to_icon_frame_spacing">0dp</dimen>
+    <dimen name="signal_indicator_to_icon_frame_spacing">@dimen/status_bar_horizontal_padding</dimen>
 
     <!-- The maximum width of the navigation bar ripples. -->
     <dimen name="key_button_ripple_max_width">95dp</dimen>
@@ -882,8 +882,8 @@
     <dimen name="fake_shadow_size">8dp</dimen>
 
     <!-- Starting margin before the signal cluster -->
-    <dimen name="signal_cluster_margin_start">0dp</dimen>
-
+    <dimen name="signal_cluster_margin_start">@dimen/status_bar_horizontal_padding</dimen>
+ 
     <!-- Padding between signal cluster and battery icon -->
     <dimen name="signal_cluster_battery_padding">2dp</dimen>
 
