--- a/packages/SystemUI/res/values/dimens.xml
+++ b/packages/SystemUI/res/values/dimens.xml
@@ -257,7 +257,8 @@
     <dimen name="notification_importance_button_text">14sp</dimen>
     <dimen name="notification_importance_button_padding">16dp</dimen>
     <dimen name="notification_importance_button_description_top_margin">12dp</dimen>
-    <dimen name="rect_button_radius">8dp</dimen>
+    <dimen name="rect_button_radius">@*android:dimen/rounded_corners_ui_core</dimen>
+    <dimen name="notification_corner_radius">@*android:dimen/rounded_corners_ui_core</dimen>
 
     <!-- The minimum height for the snackbar shown after the snooze option has been chosen. -->
     <dimen name="snooze_snackbar_min_height">56dp</dimen>
@@ -614,7 +615,7 @@
     <dimen name="notification_divider_height">0.5dp</dimen>
 
     <!-- The corner radius of the shadow behind the notification. -->
-    <dimen name="notification_shadow_radius">0dp</dimen>
+    <dimen name="notification_shadow_radius">@*android:dimen/rounded_corners_ui_core</dimen>
 
     <!-- The alpha of the dividing line between child notifications of a notification group. -->
     <item name="notification_divider_alpha" format="float" type="dimen">0.5</item>
@@ -1018,7 +1019,7 @@
     <dimen name="pip_resize_handle_margin">4dp</dimen>
 
     <!-- The corner radius for PiP window. -->
-    <dimen name="pip_corner_radius">8dp</dimen>
+    <dimen name="pip_corner_radius">@*android:dimen/rounded_corners_ui_core</dimen>
 
     <!-- The buffer to use when calculating whether the pip is in an adjust zone. -->
     <dimen name="pip_bottom_offset_buffer">1dp</dimen>
@@ -1086,7 +1087,7 @@
     <!-- The maximum offset in either direction that icons move to prevent burn-in on AOD. -->
     <dimen name="default_burn_in_prevention_offset">15dp</dimen>
 
-    <dimen name="corner_size">8dp</dimen>
+    <dimen name="corner_size">@*android:dimen/rounded_corners_ui_core</dimen>
     <dimen name="top_padding">0dp</dimen>
     <dimen name="bottom_padding">48dp</dimen>
     <dimen name="edge_margin">8dp</dimen>
@@ -1339,7 +1340,7 @@
     <dimen name="control_icon_size">24dp</dimen>
     <dimen name="control_spacing">4dp</dimen>
     <dimen name="control_list_divider">1dp</dimen>
-    <dimen name="control_corner_radius">12dp</dimen>
+    <dimen name="control_corner_radius">@*android:dimen/rounded_corners_ui_core</dimen>
     <dimen name="control_height">106dp</dimen>
     <dimen name="control_padding">12dp</dimen>
     <dimen name="control_padding_adjustment">4dp</dimen>
