--- a/packages/SystemUI/res/values/styles.xml
+++ b/packages/SystemUI/res/values/styles.xml
@@ -778,7 +778,7 @@
         <!-- used to override dark/light theming -->
         <item name="*android:colorBackgroundFloating">@color/GM2_grey_800</item>
         <item name="*android:colorPopupBackground">@color/GM2_grey_800</item>
-        <item name="*android:dialogCornerRadius">8dp</item>
+        <item name="*android:dialogCornerRadius">@*android:dimen/rounded_corners_ui_core</item>
     </style>
 
     <style name="TextAppearance.ControlSetup">
